# sdbootutil

./: .dir-locals.el  10-sdbootutil.snapper  10-sdbootutil.tukit  10-sdbootutil.tukit.conf  50-sdbootutil.install  90-dracut-tpm-pcm-signature.conf  ARCHITECTURE.md  CLAUDE.md  Cargo.toml  LICENSE  README.md  TODO  jeos-firstboot-enroll  jeos-firstboot-enroll-override.conf  kernel-install-sdbootutil.conf  kernelhooks.lua  measure-pcr-generator.sh  measure-pcr-validator.service  measure-pcr-validator.sh  module-setup.sh  rpm-script  sdboot  sdbootutil  sdbootutil-enroll  sdbootutil-enroll.service  sdbootutil-update-predictions.service  sdbootutil.conf  sdbootutil.spec  snapper-override.conf  systemd-boot-update-grub.service
.cargo/: audit.toml
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/ISSUE_TEMPLATES/: bug_report.yml
.github/actions-rs/: grcov.yml
.github/workflows/: rust.yml
completion/: sdbootutil
completions/: bash_sdbootutil
src/: cli.rs  fs.rs  io.rs  lib.rs  main.rs  ui.rs  utils.rs
src/unit_tests/: mod.rs  test_cli.rs  test_fs.rs  test_io.rs  test_lib.rs  test_ui.rs  test_utils.rs
src/unit_tests/test_files/: grub2.efi  systemd_boot.efi
uhmac/: Cargo.toml
uhmac/src/: main.rs
