[package]
name = "sdbootutil"
version = "0.1.0"
edition = "2021"
author = ["Tobias Görgens <tobi.goergens@gmail.com>"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.5.3", features = ["derive"] }
cursive = { version = "0.20.0", default-features = false, features = ["crossterm-backend"] }
elevate = "0.6.1"
tempfile = "3.10.1"

[dev-dependencies]
mockall = "0.12.1"
