[package]
name = "sdbootutil"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.5.3", features = ["derive"] }
cursive = { git = "https://github.com/gyscos/cursive.git", default-features = false, features = ["crossterm-backend"] }
elevate = "0.6.1"
libbtrfs = "0.0.12"
rand = "0.8.5"
regex = "1.10.4"
sha2 = "0.10.8"
tempfile = "3.10.1"

[dev-dependencies]
mockall = "0.12.1"
